@@ -433,12 +433,12 @@
 
             <listitem>
               <para>The CHAIN column must contain either <emphasis
-              role="bold">accountin</emphasis> or <emphasis
-              role="bold">accountout</emphasis>.</para>
+              role="bold">accipsecin</emphasis> or <emphasis
+              role="bold">accipsecout</emphasis>.</para>
             </listitem>
           </itemizedlist>
 
-          <para> These rules will NOT appear in the <emphasis
+          <para>These rules will NOT appear in the <emphasis
           role="bold">accounting</emphasis> chain.</para>
         </listitem>
       </varlistentry>
